<resources>
    <string name="app_name">CrunchTime</string>
    <string name="welcome">Let\'s Get Movin!</string>
    <string name="convert_option1">How many calories did I burn?</string>
    <string name="convert_option2">How much should I work out today?</string>
    <string name="action_settings">Settings</string>
    <string name="instruction1">Select an exercise to convert from:</string>
    <string name="enter_here">Enter # of reps/mins</string>
    <string name="convert">Convert!</string>
    <string name="calories_burned">Calories burned</string>
    <string name="msg1">You burned</string>
    <string name="cal_units">calories!</string>
    <string name="exercise_converted">Converted # of reps/mins</string>
    <string name="instruction2">Select an exercise to convert to:</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_secondary_screen_converter">SecondaryScreenConverter</string>
    <string name="how_many_cals">How many calories do you want to burn?</string>

</resources>
