<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/sky_blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.courtneyvu.crunchtime.SecondaryScreenConverter"
    tools:showIn="@layout/activity_secondary_screen_converter">

    <TextView
        android:id="@+id/instructions_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_many_cals"
        android:textSize="@dimen/text_size_secondary"/>

    <LinearLayout
        android:id="@+id/entry_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/instructions_secondary"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/cals_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:hint="Enter # of cals"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:text="@string/cal_units"/>

    </LinearLayout>

    <Button
        android:id="@+id/trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_secondary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/convert"
        android:onClick="convert"
        android:background="@color/gold"/>

    <TextView
        android:id="@+id/select_instr2"
        android:text="@string/instruction2"
        android:textSize="@dimen/text_size_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/trigger" />

    <ScrollView
        android:id="@+id/spinner2_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/select_instr2">
        <Spinner
            android:id="@+id/exercises_spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spinner2_scroll"
        android:layout_marginTop="20dp">

        <EditText android:id="@+id/exercise_conversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/exercise_converted"
            android:inputType="number"
            android:focusable="false"/>

        <TextView
            android:id="@+id/converted_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/text_size_secondary"/>
    </LinearLayout>

</RelativeLayout>
